# aidevs4

./: .env.example  .env.sops  .gitignore  .mise.toml  .sops.yaml  CLAUDE.md  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  settings.py
.claude/agents/: critical-thinking-advisor.md
.claude/skills/ngrok-server/: SKILL.md
.claude/skills/pydantic-ai/: SKILL.md
.claude/skills/pydantic-ai-workspace/evals/: evals.json
.claude/skills/pydantic-ai-workspace/iteration-1/: benchmark.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-0-agent-tools-output/: eval_metadata.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-0-agent-tools-output/with_skill/: grading.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-0-agent-tools-output/with_skill/outputs/: agent_tools_output.py
.claude/skills/pydantic-ai-workspace/iteration-1/eval-0-agent-tools-output/without_skill/: grading.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-0-agent-tools-output/without_skill/outputs/: agent_tools_output.py
.claude/skills/pydantic-ai-workspace/iteration-1/eval-1-mcp-integration/: eval_metadata.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-1-mcp-integration/with_skill/: grading.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-1-mcp-integration/with_skill/outputs/: mcp_setup.py
.claude/skills/pydantic-ai-workspace/iteration-1/eval-1-mcp-integration/without_skill/: grading.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-1-mcp-integration/without_skill/outputs/: mcp_setup.py
.claude/skills/pydantic-ai-workspace/iteration-1/eval-2-multi-agent/: eval_metadata.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-2-multi-agent/with_skill/: grading.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-2-multi-agent/with_skill/outputs/: multi_agent.py
.claude/skills/pydantic-ai-workspace/iteration-1/eval-2-multi-agent/without_skill/: grading.json
.claude/skills/pydantic-ai-workspace/iteration-1/eval-2-multi-agent/without_skill/outputs/: multi_agent.py
.claude/skills/pydantic-ai/references/: agents.md  mcp.md  models.md  multi-agent.md  output.md  tools.md
.claude/skills/python-langchain/: SKILL.md
.claude/skills/python-langchain/references/: api-patterns.md
lib/: __init__.py  hub.py  llm.py  logging.py  tracing.py
tasks/S01E01_people/: __main__.py  constants.py  tagging.py  task_and_solution.md
tasks/S01E02_findhim/: __main__.py  task_and_solution.md
tasks/S01E03_proxy/: __main__.py  mcp.py  prompts.py  proxy_server.py  task_and_solution.md  tools.py
tasks/S01E04_sendit/: __main__.py  task_and_solution.md  tools.json
tasks/S01E05_railway/: __main__.py  task_and_solution.md
tasks/S02E01_categorize/: __main__.py
tasks/S02E03_failure/: __main__.py  orchestrator.py  prompts.py  researcher.py  task_and_solution.md
tasks/S02E04_mailbox/: __main__.py  callbacks.py  orchestrator.py  prompts.py  researcher.py  task_and_solution.md  tools.py
tasks/S02E04_mailbox/.workspace/: help.md
tasks/S02E05_drone/: __main__.py  llm.py  map_analysis.py  operator.py  resources.py  task_and_solution.md  tools.py  tracking.py
tasks/S02E05_drone/.workspace/resources/: drone.html  drone.md  drone_analysis.md
tasks/S03E01_evaluation/: __main__.py  checks.py  classify_notes.py  llm.py  task_and_solution.md
tasks/S03E02_firmware/: __main__.py  shell.py  task_and_solution.md  tools.json
tasks/S03E03_reactor/: __main__.py  agent.py  task_and_solution.md
tasks/S03E04_negotiations/: __main__.py  server.py  task_and_solution.md
tasks/S03E05_savethem/: __main__.py  agents.py  orchestrator.py  solve.py  task_and_solution.md  tools.py
tasks/S03E05_savethem/.workspace/: research.md
tasks/S04E01_okoeditor/: __main__.py  agent.py  tools.py
tasks/S04E02_windpower/: __main__.py  agent.py  tools.py
tasks/S04E03_domatowo/: __main__.py  agent.py  task_and_solution.md  tools.py
tasks/S04E04_filesystem/: __main__.py  agent.py  sandbox.py  submit.py  task_and_solution.md  tools.py
tasks/S04E05_foodwarehouse/: __main__.py  agent.py  sandbox.py  submit.py  task_and_solution.md  tools.py
typings/daytona_sdk/: __init__.pyi
typings/dspy/: __init__.pyi
typings/dspy/utils/: callback.pyi
typings/geopy/geocoders/: __init__.pyi
typings/langfuse/: __init__.pyi  langchain.pyi
typings/ngrok/: __init__.pyi
typings/unidecode/: __init__.pyi
